--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,25 +1,24 @@
 @use "./home";
 @use "contact";
-@use './article';
+@use "./article";
 @import "./variables";
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 a {
-    text-decoration: none;
-
+  text-decoration: none;
 }
 
 li {
-    list-style: none;
+  list-style: none;
 }
 
 h1,
@@ -28,84 +27,74 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: $ff-header;
+  font-family: $ff-header;
 }
 
 h2 {
-    font-size: $fs-800;
-    font-style: bold;
-    margin-bottom: $size-500;
-    max-width: 45rem;
+  font-size: $fs-800;
+  font-style: bold;
+  margin-bottom: $size-500;
+  max-width: 45rem;
 }
 
 html {
-    font-size: $font-size;
-    font-family: $ff-body;
-    color: $color-black;
+  font-size: $font-size;
+  font-family: $ff-body;
+  color: $color-black;
 }
 
 button {
-    border: none;
-    cursor: pointer;
-    border-radius: $radius;
-    font-size: $fs-500;
-    line-height: 1.6rem;
-    padding: 1.9rem 2.6rem;
-    background: transparent;
+  border: none;
+  cursor: pointer;
+  border-radius: $radius;
+  font-size: $fs-500;
+  line-height: 1.6rem;
+  padding: 1.9rem 2.6rem;
+  background: transparent;
 }
 
 a {
-    color: $color-black;
-    display: block;
+  color: $color-black;
+  display: block;
 }
 
 input,
 textarea:focus {
-    outline: none;
+  outline: none;
 }
 
-
-
-
 .section-container {
-    width: 100%;
-    max-width: $max-width;
-    margin-left: auto;
-    margin-right: auto;
-    border: 2px solid purple;
+  width: 100%;
+  max-width: $max-width;
+  margin-left: auto;
+  margin-right: auto;
 
-    @media (max-width:1360px) {
-        padding-left: 3rem;
-        padding-right: 3rem;
-    }
+  @media (max-width: 1360px) {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
 }
 
 .sub-header {
-    color: $dark-orange;
-    font-size: $fs-600;
-    line-height: 2.2rem;
-    margin-bottom: $fs-600;
-    font-weight: bold;
-
-}
-// h1{
-//     color: red;
-// }
-
-@media (max-width:1180px) {
-    html {
-        font-size: 55%;
-    }
-
+  color: $dark-orange;
+  font-size: $fs-600;
+  line-height: 2.2rem;
+  margin-bottom: $fs-600;
+  font-weight: bold;
 }
 
-@media (max-width:700px) {
-    h1 {
-        font-size: 2rem;
-    }
+@media (max-width: 1180px) {
+  html {
+    font-size: 55%;
+  }
+}
 
-    h2 {
-        font-size: $fs-700;
-    }
+@media (max-width: 700px) {
+  h1 {
+    font-size: 2rem;
+  }
 
+  h2 {
+    font-size: $fs-700;
+  }
 }
