--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -2,7 +2,7 @@
 @import "mixins";
 .contact_header {
   background-color: $bg-color;
-  //padding-bottom: $size-large;
+  padding-bottom: $size-large;
   position: relative;
   overflow: hidden;
   .content {
